# dps-import-cogs

./: CHANGELOG.md  README.md  algorithm-config.yml  main.py  pyproject.toml  run-named.sh  run.sh
.github/workflows/: ci.yml  release-please.yml
scripts/: local_format_smoke_test.py
src/dps_stac_item_generator/: __init__.py  cli.py  generator.py
tests/: test_generator.py  test_stac_item_outputs.py
