[project]
name = "dps-import-cogs"
description = "DPS algorithm for generating STAC item metadata for COGs from external sources"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "obstore>=0.8.2",
    "pystac>=1.14.1",
    "rio-cogeo>=7.0.0",
    "rio-stac>=0.10.1",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "maap-py>=4.2.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.pdm.version]
source = "scm"

[tool.ruff]

[tool.ruff.format]
